#597 fixing restapi tests